static/css/main.css
/* ... */
hr + p {
  margin-top: -0.5rem;
}

.row.is-bordered {
  position: relative;
}
.row.is-bordered::before {
  background: #cdcdcd;
  content: "";
  height: 1px;
  margin-bottom: calc(1rem - 1px);
  position: absolute;
}
@media (max-width: 620px) {
  .row.is-bordered::before {
    left: 1rem;
    right: 1rem;
  }
}
@media (min-width: 620px) and (max-width: 772px) {
  .row.is-bordered::before {
    left: 1.5rem;
    right: 1.5rem;
  }
}
@media (min-width: 772px) {
  .row.is-bordered::before {
    left: 1.5rem;
    right: 1.5rem;
  }
}

a {
  color: #007aa6;
  text-decoration: none;
}
a:focus {
  outline: thin dotted #cdcdcd;
}
a:hover {
  cursor: pointer;
  text-decoration: underline;
}
a:visited {
  color: #005573;
}

li > ul,
li > ol {
  margin-bottom: 0;
  padding-top: 0;
}

li > ul > li:last-of-type,
li > ol > li:last-of-type {
  padding-bottom: 0;
}

ol,
ul {
  margin-bottom: 1.5rem;
  margin-left: 1rem;
  margin-top: 0;
  padding-left: 1rem;
}
nav ol,
nav ul {
  list-style: none;
  list-style-image: none;
}

li,
dl {
  margin: 0;
  padding: 0;
}

dd {
  margin-left: 1rem;
}

dt {
  border-top: 1px solid #cdcdcd;
}
dt:first-of-type {
  border-top: 0;
}

img {
  border: 0;
  border-radius: 0.125rem;
  height: auto;
  max-width: 100%;
}

svg:not(:root) {
  overflow: hidden;
}

figure {
  margin-bottom: 1.5rem;
  margin-left: 0;
  width: 100%;
}
figure caption,
figure figcaption {
  display: block;
  font-style: italic;
  margin-top: 0.25rem;
  width: 100%;
}

object,
iframe,
embed,
canvas,
video,
audio {
  display: block;
  margin: 0 auto 20px;
  max-width: 100%;
}

audio:not([controls]) {
  display: none;
  height: 0;
}

[hidden] {
  display: none;
}

table {
  border: 0;
  border-collapse: collapse;
  line-height: 1.5rem;
  overflow-x: auto;
  padding-bottom: 1.5rem;
  width: 100%;
  table-layout: fixed;
}

td,
th {
  font-weight: 300;
  padding-left: 0;
  text-align: left;
  text-overflow: ellipsis;
  vertical-align: top;
}
@media screen and (min-width: 772px) {
  td:not(:last-child),
th:not(:last-child) {
    padding-right: 1rem;
  }
}

thead th {
  line-height: 1rem;
  padding-bottom: 0.8rem;
}
thead tr {
  border-bottom: 1px solid #111;
  vertical-align: top;
}

tbody tr:not(:first-child), tfoot tr {
  border-top: 1px solid #cdcdcd;
}

.p-accordion__tab, td,
th {
  padding-bottom: 0.5rem;
  padding-top: calc(0.5rem - 1px);
}

.p-accordion__list {
  list-style-type: none;
  margin: 0 0 1.5rem 0;
  padding: 0;
}

.p-accordion__group {
  position: relative;
}
.p-accordion__tab {
  background-position: top 50% left 1rem;
  background-repeat: no-repeat;
  background-color: inherit;
  border: 0;
  border-radius: 0;
  margin-bottom: 0;
  padding-left: 2.75rem;
  padding-right: 1rem;
  text-align: left;
  transition-duration: 0s;
  width: 100%;
  z-index: 2;
}
.p-accordion__tab:focus {
  outline: 2px solid #19b6ee;
}
.p-accordion__tab[aria-expanded=true] {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath fill='%23666' d='M0 8.889V7.111h16v1.778z'/%3E%3C/svg%3E");
  background-size: 0.75rem;
}
.p-accordion__tab[aria-expanded=false] {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cg fill='%23666' fill-rule='nonzero'%3E%3Cpath d='M7.111 0h1.778v16H7.111z'/%3E%3Cpath d='M0 8.889V7.111h16v1.778z'/%3E%3C/g%3E%3C/svg%3E");
  background-size: 0.75rem;
}

.p-accordion__panel {
  margin: 0;
  overflow: auto;
  padding-left: 3.75rem;
}
.p-accordion__panel[aria-hidden=true] {
  display: none;
}

.p-article-pagination__link--next::after, .p-article-pagination__link--previous::before {
  color: #666;
  content: "›";
  font-size: 2em;
  position: absolute;
  top: 1rem;
}

.p-article-pagination {
  display: flex;
  width: 100%;
}

.p-article-pagination__label,
.p-article-pagination__title {
  color: #111;
  display: block;
  margin-top: 0;
  width: 100%;
}

.p-article-pagination__label {
  margin-bottom: 0.25rem;
}

.p-article-pagination__title {
  font-size: 1.125em;
}
@media (min-width: 620px) {
  .p-article-pagination__title {
    font-size: 1.25em;
  }
}

.p-article-pagination__link, .p-article-pagination__link--next, .p-article-pagination__link--previous {
  margin-top: 0;
  padding: 1rem;
  position: relative;
  width: 50%;
}
.p-article-pagination__link:hover, .p-article-pagination__link--next:hover, .p-article-pagination__link--previous:hover {
  background: #f7f7f7;
  text-decoration: none;
}

.p-article-pagination__link--previous {
  padding-left: 2.5rem;
  text-align: left;
}
@media (max-width: 460px) {
  .p-article-pagination__link--previous {
    width: auto;
  }
  .p-article-pagination__link--previous:only-child {
    width: 100%;
  }
  .p-article-pagination__link--previous:not(:only-child) * {
    display: none;
    max-width: 0.25rem;
    padding-left: 1.5rem;
  }
}
.p-article-pagination__link--previous::before {
  left: 0.5rem;
  transform: scaleX(-1);
}

.p-article-pagination__link--next {
  padding-right: 2.5rem;
  text-align: right;
}
@media (max-width: 460px) {
  .p-article-pagination__link--next {
    width: 100%;
  }
}
.p-article-pagination__link--next:only-child {
  margin-left: auto;
}
.p-article-pagination__link--next::after {
  right: 0.5rem;
}

.p-breadcrumbs {
  list-style: none;
  margin: 0.5em 0 -0.25em 1em;
  padding: 0;
  width: 100%;
}

.p-breadcrumbs__item {
  display: inline-block;
  margin-bottom: 0.6rem;
}
.p-breadcrumbs__item:not(:first-of-type) {
  text-indent: 1rem;
}
.p-breadcrumbs__item:not(:first-of-type)::before {
  content: "›";
  margin-left: -0.75rem;
  margin-right: 0.5rem;
}

.p-button {
  background-color: #fff;
  border-color: #999;
  color: #000;
}
.p-button:visited {
  color: #000;
}
.p-button:active {
  background-color: #d1d1d1;
  border-color: #fff;
  transition-duration: 0s;
}
.p-button:hover {
  background-color: #e6e6e6;
  border-color: #999;
}
/* ... */

